tests/NormalTests/paczka1/fuzzy1/27477235.err
Error in line 1: 7AstqCL A506 48,4
Error in line 3: 7AstqCL A286 63,2
Error in line 11: 7AstqCL A506 66,0
Error in line 14: KgETkE22O S220 98,6
Error in line 12: 7AstqCL S671 42,1
Error in line 26: wERvXyJ4U A286 58,2
Error in line 39: wERvXyJ4U S671 94,3
